<resources>
    <string name="app_name">Barkod Sayım</string>
    <string name="title_home">Ana Sayfa</string>
    <string name="title_inventory">Sayımlar</string>
    <string name="title_definitions">Tanımlar</string>
    <string name="title_reports">Raporlar</string>
    <string name="title_settings">Ayarlar</string>
    <string name="title_login">Giriş</string>
    <string name="title_inventory_new">Yeni Sayım</string>
    <string name="title_inventory_detail">Sayım Detay</string>
    <string name="title_inventory_scan">Sayım Tarama</string>
    <string name="title_products">Ürünler</string>
    <string name="title_product_import">Ürün İçe Aktar</string>
    <string name="title_product_new">Yeni Ürün</string>
    <string name="title_locations">Lokasyonlar</string>
    <string name="title_users">Kullanıcılar</string>
    <string name="title_barcode_scanner">Barkod Tarama</string>
    
    <!-- Giriş Ekranı -->
    <string name="hint_username">Kullanıcı Adı</string>
    <string name="hint_password">Şifre</string>
    <string name="btn_login">Giriş</string>
    <string name="error_login">Kullanıcı adı veya şifre hatalı</string>
    
    <!-- Ürün İçe Aktarma -->
    <string name="btn_import_csv">CSV Dosyası Seç</string>
    <string name="btn_import_excel">Excel Dosyası Seç</string>
    <string name="btn_import_start">İçe Aktarmayı Başlat</string>
    <string name="message_import_success">%1$d ürün başarıyla içe aktarıldı</string>
    <string name="message_import_error">İçe aktarma sırasında hata oluştu: %1$s</string>
    
    <!-- Sayım Oluşturma -->
    <string name="label_inventory_date">Sayım Tarihi</string>
    <string name="label_inventory_type">Sayım Tipi</string>
    <string name="inventory_type_controlled">Kontrollü Sayım</string>
    <string name="inventory_type_uncontrolled">Kontrolsüz Sayım</string>
    <string name="label_branch">Şube</string>
    <string name="label_warehouse">Depo</string>
    <string name="label_location">Lokasyon</string>
    <string name="label_shelf">Raf</string>
    <string name="label_read_mode">Barkod Okuma Şekli</string>
    <string name="read_mode_continuous">Devamlı</string>
    <string name="read_mode_quantity">Miktar Düzeltmeli</string>
    <string name="label_reader_type">Barkod Okuyucu</string>
    <string name="reader_type_camera">Kamera</string>
    <string name="reader_type_scanner">Barkod Okuyucu</string>
    <string name="btn_save_and_start">Kaydet ve Başla</string>
    
    <!-- Barkod Okutma -->
    <string name="label_barcode">Barkod</string>
    <string name="label_product_code">Ürün Kodu</string>
    <string name="label_description">Açıklama</string>
    <string name="label_unit">Birim</string>
    <string name="label_quantity">Miktar</string>
    <string name="btn_scan">Barkod Oku</string>
    <string name="btn_add">Ekle</string>
    <string name="error_product_not_found">Ürün bulunamadı: %1$s</string>
    <string name="message_scan_success">%1$s (%2$s) eklendi</string>
    
    <!-- Genel -->
    <string name="btn_save">Kaydet</string>
    <string name="btn_cancel">İptal</string>
    <string name="btn_delete">Sil</string>
    <string name="btn_update">Güncelle</string>
    <string name="btn_export">Dışa Aktar</string>
    <string name="message_success">İşlem başarılı</string>
    <string name="message_error">Hata oluştu</string>
    
    <!-- Yeni eklenen stringler -->
    <string name="hint_barcode">Barkod</string>
    <string name="btn_search">ARA</string>
    <string name="btn_scan_camera">KAMERA ILE TARA</string>
    <string name="btn_add_product">ÜRÜNÜ EKLE</string>
    <string name="btn_finish">BİTİR</string>
    <string name="no_products_scanned">Henüz ürün taranmadı.</string>
    <string name="product_info">Ürün Bilgileri</string>
    <string name="hint_quantity">Miktar</string>
    
    <!-- Lokasyon Yönetimi -->
    <string name="branches">Şubeler</string>
    <string name="warehouses">Depolar</string>
    <string name="locations">Lokasyonlar</string>
    <string name="shelves">Raflar</string>
    <string name="add_branch">Şube Ekle</string>
    <string name="edit_branch">Şube Düzenle</string>
    <string name="add_warehouse">Depo Ekle</string>
    <string name="edit_warehouse">Depo Düzenle</string>
    <string name="add_location">Lokasyon Ekle</string>
    <string name="edit_location">Lokasyon Düzenle</string>
    <string name="add_shelf">Raf Ekle</string>
    <string name="edit_shelf">Raf Düzenle</string>
    <string name="branch_code">Şube Kodu</string>
    <string name="branch_name">Şube Adı</string>
    <string name="warehouse_code">Depo Kodu</string>
    <string name="warehouse_name">Depo Adı</string>
    <string name="location_code">Lokasyon Kodu</string>
    <string name="location_name">Lokasyon Adı</string>
    <string name="shelf_code">Raf Kodu</string>
    <string name="shelf_name">Raf Adı</string>
    <string name="save_branch">Şubeyi Kaydet</string>
    <string name="save_warehouse">Depo Kaydet</string>
    <string name="save_location">Lokasyon Kaydet</string>
    <string name="save_shelf">Raf Kaydet</string>
    <string name="delete_branch">Şubeyi Sil</string>
    <string name="delete_warehouse">Depo Sil</string>
    <string name="delete_location">Lokasyon Sil</string>
    <string name="delete_shelf">Raf Sil</string>
    <string name="delete_branch_confirmation">Bu şubeyi silmek istediğinizden emin misiniz? Bu işlem geri alınamaz ve bu şube ile ilişkili tüm depo, lokasyon ve raflar da silinecektir.</string>
    <string name="delete_warehouse_confirmation">Bu depoyu silmek istediğinizden emin misiniz? Bu işlem geri alınamaz ve bu depo ile ilişkili tüm lokasyon ve raflar da silinecektir.</string>
    <string name="delete_location_confirmation">Bu lokasyonu silmek istediğinizden emin misiniz? Bu işlem geri alınamaz ve bu lokasyon ile ilişkili tüm raflar da silinecektir.</string>
    <string name="delete_shelf_confirmation">Bu rafı silmek istediğinizden emin misiniz? Bu işlem geri alınamaz.</string>
    <string name="field_required">Bu alan zorunludur</string>
    <string name="no_branches_added">Henüz şube eklenmemiş</string>
    <string name="no_warehouses_added">Henüz depo eklenmemiş</string>
    <string name="no_locations_added">Henüz lokasyon eklenmemiş</string>
    <string name="no_shelves_added">Henüz raf eklenmemiş</string>
    <string name="branch_not_found">Şube bulunamadı</string>
    <string name="warehouse_not_found">Depo bulunamadı</string>
    <string name="location_not_found">Lokasyon bulunamadı</string>
    <string name="shelf_not_found">Raf bulunamadı</string>
    <string name="branch_added">Şube başarıyla eklendi</string>
    <string name="branch_updated">Şube başarıyla güncellendi</string>
    <string name="branch_deleted">Şube başarıyla silindi</string>
    <string name="error_saving_branch">Şube kaydedilirken hata oluştu</string>
    <string name="error_deleting_branch">Şube silinirken hata oluştu</string>
    <string name="warehouse_added">Depo başarıyla eklendi</string>
    <string name="warehouse_updated">Depo başarıyla güncellendi</string>
    <string name="warehouse_deleted">Depo başarıyla silindi</string>
    <string name="error_saving_warehouse">Depo kaydedilirken hata oluştu</string>
    <string name="error_deleting_warehouse">Depo silinirken hata oluştu</string>
    <string name="location_added">Lokasyon başarıyla eklendi</string>
    <string name="location_updated">Lokasyon başarıyla güncellendi</string>
    <string name="location_deleted">Lokasyon başarıyla silindi</string>
    <string name="error_saving_location">Lokasyon kaydedilirken hata oluştu</string>
    <string name="error_deleting_location">Lokasyon silinirken hata oluştu</string>
    <string name="shelf_added">Raf başarıyla eklendi</string>
    <string name="shelf_updated">Raf başarıyla güncellendi</string>
    <string name="shelf_deleted">Raf başarıyla silindi</string>
    <string name="error_saving_shelf">Raf kaydedilirken hata oluştu</string>
    <string name="error_deleting_shelf">Raf silinirken hata oluştu</string>
    <string name="select_warehouse">Lütfen bir depo seçin</string>
    <string name="select_location">Lütfen bir lokasyon seçin</string>
    <string name="no_warehouses_for_branch">Bu şubeye ait depo bulunamadı</string>
    <string name="no_locations_for_warehouse">Bu depoya ait lokasyon bulunamadı</string>
</resources>