<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <!-- Global Action for Inventory Detail -->
    <action
        android:id="@+id/action_global_navigation_inventory_detail"
        app:destination="@id/navigation_inventory_detail" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.barkodm.ui.auth.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.barkodm.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_inventory_new"
            app:destination="@id/navigation_inventory_new" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_products"
            app:destination="@id/navigation_products" />
    </fragment>

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="com.example.barkodm.ui.inventory.InventoryFragment"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_inventory">
        <action
            android:id="@+id/action_inventory_to_inventory_new"
            app:destination="@id/navigation_inventory_new" />
        <action
            android:id="@+id/action_inventory_to_inventory_detail"
            app:destination="@id/navigation_inventory_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_inventory_new"
        android:name="com.example.barkodm.ui.inventory.InventoryNewFragment"
        android:label="@string/title_inventory_new"
        tools:layout="@layout/fragment_inventory_new">
        <action
            android:id="@+id/action_inventory_new_to_inventory_scan"
            app:destination="@id/navigation_inventory_scan" />
    </fragment>

    <fragment
        android:id="@+id/navigation_inventory_detail"
        android:name="com.example.barkodm.ui.inventory.InventoryDetailFragment"
        android:label="@string/title_inventory_detail"
        tools:layout="@layout/fragment_inventory_detail">
        <argument
            android:name="inventoryId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_inventory_scan"
        android:name="com.example.barkodm.ui.inventory.InventoryScanFragment"
        android:label="@string/title_inventory_scan"
        tools:layout="@layout/fragment_inventory_scan">
        <argument
            android:name="inventoryId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_definitions"
        android:name="com.example.barkodm.ui.definitions.DefinitionsFragment"
        android:label="@string/title_definitions"
        tools:layout="@layout/fragment_definitions">
        <action
            android:id="@+id/action_definitions_to_products"
            app:destination="@id/navigation_products" />
        <action
            android:id="@+id/action_definitions_to_locations"
            app:destination="@id/navigation_locations" />
        <action
            android:id="@+id/action_definitions_to_users"
            app:destination="@id/navigation_users" />
    </fragment>

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.barkodm.ui.definitions.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_products">
        <action
            android:id="@+id/action_products_to_import"
            app:destination="@id/navigation_product_import" />
        <action
            android:id="@+id/action_products_to_new"
            app:destination="@id/navigation_product_new" />
    </fragment>

    <fragment
        android:id="@+id/navigation_product_import"
        android:name="com.example.barkodm.ui.definitions.ProductImportFragment"
        android:label="@string/title_product_import"
        tools:layout="@layout/fragment_product_import" />

    <fragment
        android:id="@+id/navigation_product_new"
        android:name="com.example.barkodm.ui.product.ProductNewFragment"
        android:label="@string/title_product_new"
        tools:layout="@layout/fragment_product_new">
        <action
            android:id="@+id/action_productNewFragment_to_barcodeScannerFragment"
            app:destination="@id/navigation_barcode_scanner" />
    </fragment>

    <fragment
        android:id="@+id/navigation_barcode_scanner"
        android:name="com.example.barkodm.ui.barcode.BarcodeScannerFragment"
        android:label="@string/title_barcode_scanner"
        tools:layout="@layout/fragment_barcode_scanner" />

    <fragment
        android:id="@+id/navigation_locations"
        android:name="com.example.barkodm.ui.definitions.LocationsFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_locations">
        <action
            android:id="@+id/action_locations_to_branch_list"
            app:destination="@id/navigation_branch_list" />
        <action
            android:id="@+id/action_locations_to_warehouse_list"
            app:destination="@id/navigation_warehouse_list" />
        <action
            android:id="@+id/action_locations_to_location_list"
            app:destination="@id/navigation_location_list" />
        <action
            android:id="@+id/action_locations_to_shelf_list"
            app:destination="@id/navigation_shelf_list" />
    </fragment>

    <!-- Branch management -->
    <fragment
        android:id="@+id/navigation_branch_list"
        android:name="com.example.barkodm.ui.location.BranchListFragment"
        android:label="@string/branches"
        tools:layout="@layout/fragment_branch_list">
        <action
            android:id="@+id/action_branch_list_to_branch_edit"
            app:destination="@id/navigation_branch_edit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_branch_edit"
        android:name="com.example.barkodm.ui.location.BranchEditFragment"
        android:label="@string/edit_branch"
        tools:layout="@layout/fragment_branch_edit">
        <argument
            android:name="branchId"
            app:argType="integer" />
    </fragment>

    <!-- Warehouse management -->
    <fragment
        android:id="@+id/navigation_warehouse_list"
        android:name="com.example.barkodm.ui.location.WarehouseListFragment"
        android:label="@string/warehouses"
        tools:layout="@layout/fragment_warehouse_list">
        <action
            android:id="@+id/action_warehouse_list_to_warehouse_edit"
            app:destination="@id/navigation_warehouse_edit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_warehouse_edit"
        android:name="com.example.barkodm.ui.location.WarehouseEditFragment"
        android:label="@string/edit_warehouse"
        tools:layout="@layout/fragment_warehouse_edit">
        <argument
            android:name="warehouseId"
            app:argType="integer" />
    </fragment>

    <!-- Location management -->
    <fragment
        android:id="@+id/navigation_location_list"
        android:name="com.example.barkodm.ui.location.LocationListFragment"
        android:label="@string/locations"
        tools:layout="@layout/fragment_location_list">
        <action
            android:id="@+id/action_location_list_to_location_edit"
            app:destination="@id/navigation_location_edit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_location_edit"
        android:name="com.example.barkodm.ui.location.LocationEditFragment"
        android:label="@string/edit_location"
        tools:layout="@layout/fragment_location_edit">
        <argument
            android:name="locationId"
            app:argType="integer" />
    </fragment>

    <!-- Shelf management -->
    <fragment
        android:id="@+id/navigation_shelf_list"
        android:name="com.example.barkodm.ui.location.ShelfListFragment"
        android:label="@string/shelves"
        tools:layout="@layout/fragment_shelf_list">
        <action
            android:id="@+id/action_shelf_list_to_shelf_edit"
            app:destination="@id/navigation_shelf_edit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shelf_edit"
        android:name="com.example.barkodm.ui.location.ShelfEditFragment"
        android:label="@string/edit_shelf"
        tools:layout="@layout/fragment_shelf_edit">
        <argument
            android:name="shelfId"
            app:argType="integer" />
    </fragment>

    <!-- User management -->
    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.barkodm.ui.definitions.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users">
        <action
            android:id="@+id/action_users_to_user_edit"
            app:destination="@id/navigation_user_edit" />
    </fragment>
    
    <fragment
        android:id="@+id/navigation_user_edit"
        android:name="com.example.barkodm.ui.user.UserEditFragment"
        android:label="Kullanıcı Ekle/Düzenle"
        tools:layout="@layout/fragment_user_edit">
        <argument
            android:name="userId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.barkodm.ui.reports.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.barkodm.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>