<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.definitions.LocationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_locations"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/button_branches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/branches"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/button_warehouses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warehouses"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/button_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locations"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/button_shelves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shelves"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout> 